@@ -59,12 +59,7 @@ public class JmxGenerator {
                     httpSampler("API_Login", baseUrl + "/api/auth/login")
                         .method("POST")
                         .contentType(ContentType.APPLICATION_JSON)
-                        .body("""
-                            {
-                              "username": "%s",
-                              "password": "%s"
-                            }
-                        """.formatted(defaultAppUser, defaultAppPass))
+                        .body(String.format(   "{\"username\":\"%s\",\"password\":\"%s\"}", defaultAppUser, defaultAppPass ))
                         .children(
                             jsonExtractor("jwt_token", "$.token")
                         ),
@@ -76,17 +71,11 @@ public class JmxGenerator {
                     httpSampler("API_GET_News_List",
                             baseUrl + "/api/news"), // news api
 
-                    httpSampler("API_GET_News_By_Id",
-                            baseUrl + "/api/news/1"), // news api with id =1
-
                     httpSampler("API_GET_Events_All",
                             baseUrl + "/api/events"), //event api 
                     
                     httpSampler("API_GET_RECYCLE_HISTORY",
-                                baseUrl + "/api/recycle-history"), // recycle history api
-                    
-                    httpSampler("API_GET_Events_Upcoming",
-                            baseUrl + "/api/events?filter=upcoming") // events api with filter 
+                                baseUrl + "/api/recycle-history") // recycle history api
                 )
                 
         ).saveAsJmx("tests/load_test.jmx");
